--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -71,7 +71,8 @@ body {
 }
 
 .my_events-btn:hover {
-  background-color: #40e29a;
-  border: 1px solid #40E29A;
+  background-color: #FF6600;
+  border: 1px solid #FF6600;
   color: #000000;
+  transition: background-color 0.3s ease;
 }
