--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -7,6 +7,6 @@
   </div>
 
   <div class="text-center mt-4">
-    <%= link_to "Meus Eventos", events_path, class: 'btn btn-secondary' %>
+    <%= link_to "Meus Eventos", my_events_path, class: 'btn btn-secondary' %>
   </div>
 </div>
