--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,7 +1,7 @@
 <div class="container py-5">
   <div class="row">
     <div class="col-12 col-md-8 col-lg-6 mx-auto">
-      <h2 class="mb-4">Adicionar novo evento</h2>
+      <h2 class="mb-4 text-center">Adicionar novo evento</h2>
       <%= render 'form' %>
     </div>
   </div>
