--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -43,7 +43,7 @@
               <%= link_to "Pedidos", orders_path, class: "dropdown-item" %>
               <%= link_to "Perfil", user_path(current_user), class: "dropdown-item" %>
               <%= link_to "Tickets", tickets_path, class: "dropdown-item" %>
-              <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item" %>
+              <%= link_to "Sair", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item" %>
             </div>
           </li>
         <% else %>
