--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,7 +3,7 @@
     <div class="col-12 col-md-8 col-lg-6 mx-auto">
       <div class="card shadow-sm">
         <div class="card-body">
-          <h1 class="card-title text-center mb-4">Perfil do Usuário</h1>
+          <h1 class="card-title text-center mb-4">Seu Perfil</h1>
 
           <p class="mb-2"><strong>Nome:</strong> <%= @user.name %></p>
           <p class="mb-2"><strong>Email:</strong> <%= @user.email %></p>
@@ -15,7 +15,10 @@
           <% end %>
 
           <div class="text-center mt-4">
-            <%= link_to "Editar perfil", edit_user_registration_path, class: 'btn btn-outline-primary' %>
+            <div class="text-center mt-4">
+  <%= link_to "Editar <i class='fa fa-edit'></i> ".html_safe, edit_user_registration_path, class: 'btn btn-outline-primary px-4' %>
+</div>
+
           </div>
         </div>
       </div>
