--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-12 col-md-8 col-lg-6 mx-auto">
       <div class="bg-white rounded p-4 shadow-sm">
-        <h2 class="mb-4 text-center">Editar Usuário</h2>
+        <h2 class="mb-4 text-center">Editar Perfil</h2>
 
         <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
           <%= f.error_notification %>
