--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -7,6 +7,6 @@
   </div>
 
   <div class="text-center mt-4">
-    <%= link_to 'Voltar', events_path, class: 'btn btn-secondary' %>
+    <%= link_to 'Voltar', my_events_path, class: 'btn btn-secondary' %>
   </div>
 </div>
