--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -5,6 +5,6 @@
       <a href="https://www.lewagon.com" target="_blank"><i class="fab fa-linkedin"></i></a>
     </div>
     <div class="footer-copyright">
-      This footer was made with the encouragement of Dudu Piccin
+      Este rodapé foi feito com o incentivo de Dudu Piccin
     </div>
 </div>
