--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -15,6 +15,9 @@
     <%= form.hidden_field :event_id, value: @event.id %>
     <%# form.hidden_field :user_id, value: @order.user.id %>
 
-    <%= form.submit 'Fazer Pedido', class: 'btn btn-primary' %>
+    <div class="text-center mt-3">
+      <%= form.submit 'Fazer Pedido', class: 'btn btn-primary' %>
+    </div>
+
   <% end %>
 </div>
