--- a/app/views/tickets/edit_images.html.erb
+++ b/app/views/tickets/edit_images.html.erb
@@ -8,7 +8,7 @@
           <div class='order-ticket'>
             <div class="order-ticket-infos">
               <div class="form-group">
-                <%= ticket_form.input :image, as: :file, label: "#{ticket.ticket_type}", input_html: { accept: 'image/*', class: 'form-control' } %>
+                <%= ticket_form.input :image, as: :file, label: "#{ticket.ticket_type.capitalize}", input_html: { accept: 'image/*', class: 'form-control' } %>
               </div>
             </div>
           </div>
