--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -110,7 +110,7 @@ body {
   border-radius: 20px;
   background: rgb(255, 255, 255);
   border: 1px solid #ffffff;
-  color: #ffffff;
+  color: #000000;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
   margin-right: 2px;
   text-align: center;
