--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -32,6 +32,9 @@
             </div>
           <% end %>
       </div>
+      <div class="text-center mt-3">
+        <%= link_to 'Login', new_user_session_path, class: 'btn btn-link' %>
+      </div>
     </div>
   </div>
 </div>
