--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -12,9 +12,8 @@
       <div class="search-container">
         <%= form_with url: events_path, method: :get, class: "d-flex" do %>
           <div class="input-group">
-            <%= text_field_tag :query, params[:query], class: "form-control field-btn", placeholder: "Nome do evento" %>
-            <%= text_field_tag :location, params[:location], class: "form-control field-btn", placeholder: "Localização" %>
-            <%= text_field_tag :date, params[:date], class: "form-control field-btn", placeholder: "Date", type: "date" %>
+            <%= text_field_tag :query, params[:query], class: "form-control field-btn", placeholder: "Nome do evento ou cidade", style: "width: 300px;" %>
+            <%= text_field_tag :date, params[:date], class: "form-control field-btn", placeholder: "Date", type: "date", style: "width: 250px;"%>
 
             <%= button_tag type: "submit", name: "", class: "search-btn btn-success" do %>
               <i class="fa-solid fa-magnifying-glass"></i>
