ticket types on show

--- a/app/views/tickets/new.html.erb
+++ b/app/views/tickets/new.html.erb
@@ -3,16 +3,15 @@
     <h6><strong><%= @event.title %></strong></h6>
     <hr>
 
-    <%= simple_form_for @ticket, url: event_tickets_path(@event) do |f| %>
+    <%= form_with url: event_tickets_path(@event), method: :post, local: true do |f| %>
       <% @event.ticket_types.each do |ticket_type| %>
         <div class="form-group">
-          <%= f.input :ticket_type, label: "#{ticket_type.type_of_ticket} - ticket_type_id: #{ticket_type.id}", placeholder: '0', input_html: { min: 0, step: 1, class: 'form-control' }  %>
-          <%# label_tag "ticket_types[#{ticket_type.id}]", ticket_type.ticket_type %>
-          <%# number_field_tag "ticket[ticket_types][#{ticket_type.id}]", 0, min: 0, class: "form-control", placeholder: "Quantity" %>
+          <%= label_tag "ticket_types[#{ticket_type.id}]", "#{ticket_type.type_of_ticket}", class: "form-label" %>
+          <%= number_field_tag "ticket_types[#{ticket_type.id}]", 0, min: 0, step: 1, class: "form-control", placeholder: "Quantity" %>
         </div>
       <% end %>
 
-      <%= f.button :submit, 'Vender ingressos', class: 'btn btn-primary mt-3' %>
+      <%= f.submit 'Create Tickets', class: 'btn btn-primary mt-3' %>
     <% end %>
   </div>
 </div>
