--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,17 +1,85 @@
 <div class="container">
-  <div class="bg-white rounded p-4 shadow-sm">
-    <h6><strong><%= @event.title %></strong></h6>
-    <hr>
+  <div class="row mt-3">
+    <div class='col-sm-12 col-lg-7'>
+      <div style="width: 100%; height: 300px;"
+        data-controller="map"
+        data-map-markers-value="<%= @marker.to_json %>"
+        data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
+      </div>
 
-    <%= form_with url: event_tickets_path(@event), method: :post, local: true do |f| %>
-      <% @event.ticket_types.each do |ticket_type| %>
-        <div class="form-group">
-          <%= label_tag "ticket_types[#{ticket_type.id}]", "#{ticket_type.type_of_ticket}", class: "form-label" %>
-          <%= number_field_tag "ticket_types[#{ticket_type.id}]", 0, min: 0, step: 1, class: "form-control", placeholder: "Quantity" %>
+      <div class="d-flex my-3 justify-content-between">
+        <% if current_user %>
+          <%= link_to 'Vender', new_event_ticket_path(@event), class: 'btn btn-primary rounded ms-1', style: 'width: 100%' %>
+          <button type="button" class="btn btn-primary rounded ms-1" data-bs-toggle="modal" data-bs-target="#buyTicketModal" style='width:100%'>
+            Comprar
+          </button>
+        <% else %>
+          <%= link_to 'Vender', new_user_session_path, class: 'btn btn-primary rounded ms-1', style: 'width: 100%' %>
+          <%= link_to 'Comprar', new_user_session_path, class: 'btn btn-primary rounded ms-1', style: 'width: 100%' %>
+        <% end %>
+      </div>
+
+      <div class='d-flex justify-content-between mt-3'>
+        <div>
+          <div class='d-flex align-items-baseline'>
+            <h3><%= @event.title %></h3>
+          </div>
         </div>
-      <% end %>
+        <div>
+          <p class='mb-3'><strong><%= @event.date %></strong></p>
+        </div>
+      </div>
 
-      <%= f.submit 'Create Tickets', class: 'btn btn-primary mt-3' %>
-    <% end %>
+        <p class='h5'><%= @event.user.name %></p>
+        <p><%= @event.location %></p>
+        <p><%= @event.description %></p>
+
+        <!-- Forum -->
+          <div class="mt-5">
+            <h3>Fórum</h3>
+
+            <!-- Display Posts -->
+            <div id="posts">
+              <% @event.posts.order(created_at: :desc).each do |post| %>
+                <%= render "events/post", post: post %>
+              <% end %>
+            </div>
+
+            <!-- New Post -->
+            <%= simple_form_for [@event, @post], html: { data: { controller: "reset-form", action: "turbo:submit-end->reset-form#reset" }} do |f| %>
+              <div class="form-group mt-3">
+                <%= f.input :content, as: :text, label: false, input_html: { class: 'form-control bg-white', placeholder: 'Novo post...' } %>
+              </div>
+              <div class="text-end d-flex justify-content-between mb-4">
+                <%= link_to 'Voltar aos eventos', events_path, class: 'btn btn-sm btn-outline-primary' %>
+                <%= f.button :submit, 'Post', class: 'btn btn-sm btn-primary' %>
+              </div>
+            <% end %>
+          </div>
+    </div>
+
+    <div class='col-sm-12 col-lg-5'>
+      <div class="sticky-photo">
+        <% if @event.photo.present? %>
+          <%= cl_image_tag(@event.photo.key, widht: '100%', crop: :fill, class: 'img-fluid') %>
+        <% end %>
+      </div>
+    </div>
   </div>
+
+  <!-- Buy Modal -->
+  <div class="modal fade" id="buyTicketModal" tabindex="-1" role="dialog" aria-labelledby="buyTicketModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h3 class="modal-title" id="buyTicketModalLabel">Comprar</h3>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <%= render 'orders/form', ticket: @ticket, event: @event %>
+        </div>
+      </div>
+    </div>
+  </div>
+
 </div>
