--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -1,12 +1,22 @@
 <div class="bg-white rounded p-4 shadow-sm">
-    <h6><strong><%= @event.title %></strong></h6>
+  <h6><strong><%= @event.title %></strong></h6>
   <hr>
 
   <%= simple_form_for [@event, @order] do |form| %>
+    <% @event.ticket_types.each do |ticket_type| %>
+      <div class="form-group">
+        <%= form.input "#{ticket_type.type_of_ticket}_quantity", label: "#{ticket_type.type_of_ticket.capitalize} - #{ticket_type.tickets.count} #{ticket_type.tickets.count > 1 ? 'disponíveis' : 'disponível'} (Preço: R$#{ticket_type.price_cents / 10.0} cada)",
+                      as: :integer,
+                      input_html: { min: 0, max: ticket_type.tickets.count, step: 1, value: 0 },
+                      required: false %>
+      </div>
+    <% end %>
 
     <%= form.hidden_field :event_id, value: @event.id %>
-    <%# form.hidden_field :user_id, value: @order.user.id %>
 
-    <%= form.submit 'Fazer Pedido', class: 'btn btn-primary' %>
+    <div class="text-center mt-3">
+      <%= form.submit 'Fazer Pedido', class: 'btn btn-primary' %>
+    </div>
+
   <% end %>
 </div>
