ticket types checkout

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -9,7 +9,9 @@
 
       <div class="d-flex my-3 justify-content-between">
         <% if current_user %>
-          <%= link_to 'Vender', new_event_ticket_path(@event), class: 'btn btn-primary rounded ms-1', style: 'width: 100%' %>
+          <button type="button" class="btn btn-primary rounded me-1" data-bs-toggle="modal" data-bs-target="#sellTicketModal" style='width:100%'>
+            Vender
+          </button>
           <button type="button" class="btn btn-primary rounded ms-1" data-bs-toggle="modal" data-bs-target="#buyTicketModal" style='width:100%'>
             Comprar
           </button>
@@ -63,6 +65,22 @@
         <% if @event.photo.present? %>
           <%= cl_image_tag(@event.photo.key, widht: '100%', crop: :fill, class: 'img-fluid') %>
         <% end %>
+      </div>
+    </div>
+  </div>
+
+
+  <!-- Sell Modal -->
+  <div class="modal fade" id="sellTicketModal" tabindex="-1" role="dialog" aria-labelledby="sellTicketModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h3 class="modal-title" id="sellTicketModalLabel">Vender</h3>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <%= render 'tickets/form', event: @event %>
+        </div>
       </div>
     </div>
   </div>
