--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,11 +1,13 @@
 <div class="container py-5">
   <div class="row">
     <div class="col-12 col-md-8 col-lg-6 mx-auto">
-      <h2 class="mb-4 text-center">Adicionar novo evento</h2>
-      <%= render 'form' %>
+      <div class="bg-white rounded p-4 shadow-sm">
+        <h2 class="mb-4 text-center">Adicionar novo evento</h2>
+        <%= render 'form' %>
+      </div>
     </div>
   </div>
-
+  
   <div class="text-center mt-4">
     <%= link_to 'Voltar', my_events_path, class: 'btn btn-secondary' %>
   </div>
