--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-12 col-md-8 col-lg-6 mx-auto">
       <div class="bg-white rounded p-4 shadow-sm">
-        <h2 class="mb-4 text-center">Inscrever-se</h2>
+        <h2 class="mb-4 text-center">Inscreva-se</h2>
           <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
             <%= f.error_notification %>
 
@@ -19,7 +19,7 @@
               <%= f.input :password,
                           required: true,
                           label: "Senha",
-                          hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
+                          hint: ("Mínimo de #{@minimum_password_length} caracteres" if @minimum_password_length),
                           input_html: { autocomplete: "new-password" } %>
               <%= f.input :password_confirmation,
                           required: true,
