--- a/app/views/events/_ticket_type_fields.html.erb
+++ b/app/views/events/_ticket_type_fields.html.erb
@@ -4,4 +4,6 @@
 <div class="form-group">
   <%= f.input :price, label: 'Preço em centavos', as: :integer, input_html: { min: 0, class: 'form-control' } %>
 </div>
-<%= link_to_remove_association "Remover Tipo de Ingresso", f %>
+<div class='text-end'>
+  <%= link_to_remove_association "-", f, class: 'btn btn-sm btn-outline-danger text-decoration-none association mb-3' %>
+</div>
