--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -53,7 +53,7 @@
                 <%= f.input :content, as: :text, label: false, input_html: { class: 'form-control bg-white', placeholder: 'Novo post...' } %>
               </div>
               <div class="text-end d-flex justify-content-between mb-4">
-                <%= link_to 'Voltar aos eventos', events_path, class: 'btn btn-sm btn-outline-primary' %>
+                <%= link_to 'Voltar aos eventos', events_path, class: 'btn btn-sm btn-outline-secondary' %>
                 <%= f.button :submit, 'Post', class: 'btn btn-sm btn-primary' %>
               </div>
             <% end %>
