--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -5,12 +5,14 @@
   <%= simple_form_for [@event, @order] do |form| %>
     <% @event.ticket_types.each do |ticket_type| %>
       <% available_count = Ticket.where(ticket_type: ticket_type, available: true).count %>
-      <div class="form-group">
-        <%= form.input "#{ticket_type.type_of_ticket}_quantity", label: "#{ticket_type.type_of_ticket.capitalize} - #{available_count} #{available_count > 1 ? 'disponíveis' : 'disponível'} (Preço: R$#{ticket_type.price_cents / 10.0} cada)",
-                      as: :integer,
-                      input_html: { min: 0, max: available_count, step: 1, value: 0 },
-                      required: false %>
-      </div>
+        <% if available_count > 0 %>
+          <div class="form-group">
+            <%= form.input "#{ticket_type.type_of_ticket}_quantity", label: "#{ticket_type.type_of_ticket.capitalize} (Preço: #{humanized_money_with_symbol(ticket_type.price_cents / 10.0)} cada) - #{available_count} #{available_count > 1 ? 'disponíveis' : 'disponível'}",
+                          as: :integer,
+                          input_html: { min: 0, max: available_count, step: 1, value: 0 },
+                          required: false %>
+          </div>
+        <% end %>
     <% end %>
 
     <%= form.hidden_field :event_id, value: @event.id %>
