--- a/app/views/tickets/_form.html.erb
+++ b/app/views/tickets/_form.html.erb
@@ -5,11 +5,13 @@
     <%= form_with url: event_tickets_path(@event), method: :post, local: true do |f| %>
       <% @event.ticket_types.each do |ticket_type| %>
         <div class="form-group">
-          <%= label_tag "ticket_types[#{ticket_type.id}]", "#{ticket_type.type_of_ticket} (Preço: #{ticket_type.price_cents} cada)", class: "form-label" %>
+          <%= label_tag "ticket_types[#{ticket_type.id}]", "#{ticket_type.type_of_ticket} (Preço: #{humanized_money_with_symbol(ticket_type.price_cents / 10.0)} cada)", class: "form-label" %>
           <%= number_field_tag "ticket_types[#{ticket_type.id}]", 0, min: 0, step: 1, class: "form-control", placeholder: "Quantity" %>
         </div>
       <% end %>
 
-      <%= f.submit 'Vender Ingressos', class: 'btn btn-primary mt-3 text-center' %>
+      <div class="text-center mt-3">
+        <%= f.submit 'Vender Ingressos', class: 'btn btn-primary' %>
+      </div>
     <% end %>
   </div>
