--- a/app/views/events/_ticket_type_fields.html.erb
+++ b/app/views/events/_ticket_type_fields.html.erb
@@ -2,7 +2,7 @@
   <%= f.input :type_of_ticket, label: false, placeholder: 'Tipo de ingresso', input_html: { class: 'form-control' } %>
 </div>
 <div class="form-group">
-  <%= f.input :price, label: 'Preço em centavos', as: :integer, input_html: { min: 0, class: 'form-control' } %>
+  <%= f.input :price_cents, label: 'Preço em centavos', as: :integer, input_html: { min: 0, class: 'form-control' } %>
 </div>
 <div class='text-end'>
   <%= link_to_remove_association "-", f, class: 'btn btn-sm btn-outline-danger text-decoration-none association mb-3' %>
