--- a/app/views/tickets/add_images.html.erb
+++ b/app/views/tickets/add_images.html.erb
@@ -1,22 +1,19 @@
 <div class="container">
   <h2 class="mb-4">Envie seus tickets</h2>
 
-  <%= simple_form_for :tickets, url: update_images_tickets_path, method: :patch, html: { multipart: true, class: 'needs-validation', novalidate: true } do |f| %>
-    <div class="tickets-container">
-      <% @tickets.each do |ticket| %>
-        <%= f.simple_fields_for :tickets, ticket do |ticket_form| %>
-          <div class='order-ticket'>
-            <div class="order-ticket-infos">
-              <div class="form-group">
-                <%= ticket_form.input :image, as: :file, label: "#{ticket.ticket_type.capitalize}", input_html: { accept: 'image/*', class: 'form-control' } %>
-              </div>
-            </div>
+  <% @tickets.each do |ticket| %>
+    <%= simple_form_for ticket, url: upload_images_tickets_path(ticket), method: :patch, html: { multipart: true, class: 'needs-validation', novalidate: true } do |f| %>
+      <div class='order-ticket'>
+        <div class="order-ticket-infos">
+          <div class="form-group">
+            <%= f.input :photo, as: :file, label: "#{ticket.ticket_type.type_of_ticket} #{ticket.id}", input_html: { accept: 'image/*', class: 'form-control' } %>
+            <%= f.hidden_field :ticket_id, value: ticket.id %>
           </div>
-        <% end %>
-      <% end %>
-    </div>
-    <div class="mt-4">
-      <%= f.submit 'Enviar arquivos', class: 'btn btn-primary' %>
-    </div>
+        </div>
+      </div>
+      <div class="mt-4">
+        <%= f.submit 'Enviar arquivo', class: 'btn btn-primary' %>
+      </div>
+    <% end %>
   <% end %>
 </div>
