--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -21,20 +21,22 @@
         <% end %>
       </div>
 
-      <div class='d-flex justify-content-between mt-3'>
-        <div>
-          <div class='d-flex align-items-baseline'>
-            <h3><%= @event.title %></h3>
+      <div class='forum-card'>
+        <div class='d-flex justify-content-between mt-3'>
+          <div>
+            <div class='d-flex align-items-baseline'>
+              <h3><%= @event.title %></h3>
+            </div>
+          </div>
+          <div>
+            <p class='mb-3'><strong><%= @event.date %></strong></p>
           </div>
         </div>
-        <div>
-          <p class='mb-3'><strong><%= @event.date %></strong></p>
-        </div>
-      </div>
 
-        <p class='h5'><%= @event.user.name %></p>
-        <p><%= @event.location %></p>
-        <p><%= @event.description %></p>
+          <p class='h5'><%= @event.user.name %></p>
+          <p><%= @event.location %></p>
+          <p><%= @event.description %></p>
+      </div>
 
         <!-- Forum -->
           <div class="mt-5">
