--- a/app/assets/stylesheets/components/_order.scss
+++ b/app/assets/stylesheets/components/_order.scss
@@ -1,6 +1,6 @@
 .order-ticket {
   overflow: hidden;
-  width: 32%;
+  width: 388px;
   background: white;
   display: flex;
   box-shadow: 0 15px 15px -14px rgba(0,0,0,0.2);
