--- a/app/views/tickets/add_images.html.erb
+++ b/app/views/tickets/add_images.html.erb
@@ -21,7 +21,7 @@
             <div class="upload-ticket-infos">
               <div class='uploaded'>
                 <div class='migué'>
-                  <p><%= ticket.ticket_type.type_of_ticket %> - Arquivo enviado!</p>
+                  <p><%= ticket.ticket_type.type_of_ticket %> - Arquivo enviado</p>
                 </div>
               </div>
             </div>
