ticket image view button modal

--- a/app/assets/stylesheets/components/_ticket.scss
+++ b/app/assets/stylesheets/components/_ticket.scss
@@ -90,3 +90,9 @@
 .card-ticket .card-ticket-infos {
   padding: 16px;
 }
+
+#ticket-image{
+  background-color: #ffffff;
+  border: none;
+  padding: 0;
+}
