front view event card

--- a/app/assets/stylesheets/components/_events.scss
+++ b/app/assets/stylesheets/components/_events.scss
@@ -2,3 +2,35 @@
   width: 31px;
   border-radius: 50%;
 }
+
+.btn-vender,
+.btn-comprar {
+  font-family: "Poppins", sans-serif;
+  background-color: #E67E22;
+  border: none;
+  color: white;
+  border-radius: 10px;
+  padding: 10px 20px;
+  transition: background-color 0.3s ease;
+
+  &:hover {
+    background-color: #FF6600;
+    color: #fff;
+    font-size: larger;
+  }
+}
+
+.btn-post {
+  font-family: "Poppins", sans-serif;
+  background-color: #E67E22;
+  border: none;
+  color: white;
+  border-radius: 10px;
+  padding: 10px 20px;
+  transition: background-color 0.3s ease;
+
+  &:hover {
+    background-color: #FF6600;
+    color: #000000;
+  }
+}
