--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -19,3 +19,7 @@ $headers-font: "Poppins", "Helvetica", "sans-serif";
 h1, h2, h3 {
   font-family: 'Poppins', sans-serif;
 }
+
+.btn {
+  font-family: 'Poppins', sans-serif;
+}
