--- a/app/views/events/_post.html.erb
+++ b/app/views/events/_post.html.erb
@@ -11,7 +11,7 @@
               <%= image_tag "avatar.svg", crop: :fill, class: 'forum-avatar'  %>
             <% end %>
             <div>
-              <p class='forum-user'><%= post.user.email %></p>
+              <p class='forum-user'><%= post.user.name %></p>
               <p class='forum-text'><%= post.content %></p>
             </div>
           </div>
