--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -25,12 +25,12 @@
 
             <div class="form-group mb-3 position-relative">
               <i class="fa-solid fa-lock position-absolute" style="left: 10px; top: 50%; transform: translateY(-50%); color: #FF6600;"></i>
-              <%= f.input :password, label: false, placeholder: 'Senha', required: false, input_html: { class: 'form-control', autocomplete: 'new-password', style: 'padding-left: 35px;' } %>
+              <%= f.input :password, label: false, placeholder: 'Nova Senha', required: false, input_html: { class: 'form-control', autocomplete: 'new-password', style: 'padding-left: 35px;' } %>
             </div>
 
             <div class="form-group mb-3 position-relative">
               <i class="fa-solid fa-lock position-absolute" style="left: 10px; top: 50%; transform: translateY(-50%); color: #FF6600;"></i>
-              <%= f.input :password_confirmation, label: false, placeholder: 'Confirmação da Senha', required: false, input_html: { class: 'form-control', autocomplete: 'new-password', style: 'padding-left: 35px;' } %>
+              <%= f.input :password_confirmation, label: false, placeholder: 'Confirmar Nova Senha', required: false, input_html: { class: 'form-control', autocomplete: 'new-password', style: 'padding-left: 35px;' } %>
             </div>
 
             <div class="form-group mb-3 position-relative">
